fixed language checkbox overflow

--- a/src/index.css
+++ b/src/index.css
@@ -165,12 +165,15 @@ body {
 
 }
 
-.popup__content div {
+.popup__content > div:first-of-type {
+  height: 80%;
   width: 90%;
+  overflow-y: auto;
 }
 
 .language-checkbox {
   padding: 10px;
+
 }
 
 .language-checkbox__label input[type='checkbox'] {
